fix accent color not showing on social media link hover

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,6 +29,7 @@ a {
 
 a:hover {
   cursor: pointer;
+  color: var(--clr-blue-accent);
   text-decoration: underline;
 }
 
